--- a/pointer.css
+++ b/pointer.css
@@ -1,38 +1,23 @@
 /* 
-    This CSS file was created by OwL for use by pointer.js, 
-     witch can be found on https://seattleowl.com. 
+    This CSS file was created by OwL and Nepomuc to be used by pointer.js.
 */
 
 #pointer-dot {
-    left: 0;
-    top: 0;
-    width: 0;
-    height: 0;
-    border: 2.5px solid white;
-    position: fixed;
-    border-radius: 4px;
-    z-index: 101;
-    pointer-events: none;
-    transition: border-color 0.5s;
+  left: 0;
+  top: 0;
+  width: 0;
+  height: 0;
+  position: fixed;
+  z-index: 1000000;
+  pointer-events: none;
+  transition: border-color 0.5s;
 }
-
 #pointer-ring {
-    left: 0;
-    top: 0;
-    width: 0;
-    height: 0;
-    padding: 15px;
-    border: 2px solid #750c7e;
-    position: fixed;
-    border-radius: 100px;
-    z-index: 102;
-    pointer-events: none;
-}
-
-html {
-    cursor: none !important;
-}
-
-a {
-    cursor: none !important;
+  left: 0;
+  top: 0;
+  width: 0;
+  height: 0;
+  position: fixed;
+  z-index: 999999;
+  pointer-events: none;
 }
